--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.6.11",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.3.1",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
