--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.6.11",
+    "cloudinary": "^2.5.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "firebase": "^11.3.1",
+    "firebase-admin": "^13.1.0",
+    "formidable": "^3.5.2",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
