--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.6.11",
     "cloudinary-react": "^1.8.1",
+    "cloudinary": "^1.41.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "firebase": "^11.3.1",
